SERVER-63843 Don't allow recursive doLog in sync signal handlers