src/mongo/logv2/log_detail.cpp
@@ -31,6 +31,9 @@
 #include "mongo/platform/basic.h"
 
 #include <fmt/format.h>
+#ifdef _WIN32
+#include <io.h>
+#endif
 
 #include "mongo/db/tenant_id.h"
 #include "mongo/logv2/attributes.h"
@@ -39,13 +42,41 @@
 #include "mongo/logv2/log_domain_internal.h"
 #include "mongo/logv2/log_options.h"
 #include "mongo/logv2/log_source.h"
+#include "mongo/util/scopeguard.h"
 #include "mongo/util/static_immortal.h"
 #include "mongo/util/testing_proctor.h"
 
 #define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kControl
 
 
-namespace mongo::logv2::detail {
+namespace mongo::logv2 {
+namespace {
+thread_local int loggingDepth = 0;
+}  // namespace
+
+bool loggingInProgress() {
+    return loggingDepth > 0;
+}
+
+void signalSafeWriteToStderr(StringData message) {
+    while (!message.empty()) {
+#if defined(_WIN32)
+        auto ret = _write(_fileno(stderr), message.rawData(), message.size());
+#else
+        auto ret = write(STDERR_FILENO, message.rawData(), message.size());
+#endif
+        if (ret == -1) {
+            if (lastPosixError() == posixError(EINTR)) {
+                continue;
+            }
+            return;
+        }
+        message = message.substr(ret);
+    }
+}
+
+namespace detail {
+
 namespace {
 GetTenantIDFn& getTenantID() {
     // Ensure that we avoid undefined initialization ordering
@@ -148,6 +179,9 @@ void doLogImpl(int32_t id,
                LogOptions const& options,
                StringData message,
                TypeErasedAttributeStorage const& attrs) {
+    loggingDepth++;
+    ScopeGuard updateDepth = [] { loggingDepth--; };
+
     dassert(options.component() != LogComponent::kNumLogComponents);
     // TestingProctor isEnabled cannot be called before it has been
     // initialized. But log statements occurring earlier than that still need
@@ -203,4 +237,6 @@ void doUnstructuredLogImpl(LogSeverity const& severity,  // NOLINT
     doLogImpl(0, severity, options, formatted, TypeErasedAttributeStorage());
 }
 
-}  // namespace mongo::logv2::detail
+}  // namespace detail
+
+}  // namespace mongo::logv2
